--- a/assets/scss/abstracts/mixins/_mixins.scss
+++ b/assets/scss/abstracts/mixins/_mixins.scss
@@ -5,5 +5,5 @@
 @import 'media-queries';
 @import 'typography';
 @import 'buttons';
-@import 'transitions';
+@import 'transition';
 @import 'icons';
