--- a/assets/scss/abstracts/variables/_variables.scss
+++ b/assets/scss/abstracts/variables/_variables.scss
@@ -25,7 +25,7 @@ $base-box-shadow-color: rgba($black, 0.05) !default;
 // =====================================================
 $base-font-family: $font-family-sans-serif !default;
 $base-font-size: $font-size !default;
-$base-font-weight: $font-weight-regular !default;
+$base-font-weight: $font-weight-normal !default;
 $base-line-height: 1.5 !default;
 // =====================================================
 
