--- a/assets/scss/abstracts/variables/_buttons.scss
+++ b/assets/scss/abstracts/variables/_buttons.scss
@@ -15,7 +15,7 @@ $button-line-height: $base-line-height !default;
 $button-text-transform: null !default;
 $button-disabled-opacity: 0.5 !default;
 
-$button-icon-size: calc(
+$button-icon-width: calc(
     ($button-padding-y * 2) + ($button-font-size * $button-line-height) + ($button-border-width * 2)
 ) !default;
 $button-icon-margin: div($button-padding-x, 2) !default;
@@ -25,7 +25,7 @@ $button-big-padding-y: $button-padding-y + 0.125rem !default;
 $button-big-padding-x: $button-big-padding-y * 2 !default;
 $button-big-font-size: $base-font-size * 1.25 !default;
 
-$button-big-icon-size: calc(
+$button-big-icon-width: calc(
     ($button-big-padding-y * 2) + ($button-big-font-size * $button-line-height) + ($button-border-width * 2)
 ) !default;
 $button-big-icon-margin: div($button-big-padding-x, 2) !default;
@@ -35,7 +35,7 @@ $button-small-padding-y: $button-padding-y - 0.125rem !default;
 $button-small-padding-x: $button-small-padding-y * 2 !default;
 $button-small-font-size: $base-font-size * 0.875 !default;
 
-$button-small-icon-size: calc(
+$button-small-icon-width: calc(
     ($button-small-padding-y * 2) + ($button-small-font-size * $button-line-height) + ($button-border-width * 2)
 ) !default;
 $button-small-icon-margin: div($button-small-padding-x, 2) !default;
