--- a/assets/scss/abstracts/variables/_utilities.scss
+++ b/assets/scss/abstracts/variables/_utilities.scss
@@ -6,7 +6,7 @@
 $transition-duration: 0.3s !default;
 $transition-timing-function: ease-in-out !default;
 
-// Spacing
+// Spacer
 $spacer: 1rem !default;
 $spacers: (
     'auto': auto,
