--- a/assets/scss/base/reset/_typography.scss
+++ b/assets/scss/base/reset/_typography.scss
@@ -14,10 +14,10 @@
     line-height: $headings-line-height;
 }
 
-@each $heading, $font-size in $headings-font-sizes {
+@each $heading, $value in $headings-font-sizes {
     #{$heading} {
         @extend %heading;
-        font-size: $font-size;
+        font-size: $value;
     }
 }
 
