--- a/assets/scss/base/typography/_headings.scss
+++ b/assets/scss/base/typography/_headings.scss
@@ -2,7 +2,7 @@
 // Headings
 // =====================================================
 
-@each $heading, $font-size in $headings-font-sizes {
+@each $heading, $value in $headings-font-sizes {
     .#{$heading} {
         @extend #{$heading};
     }
