--- a/assets/scss/layout/footer/_navbar.scss
+++ b/assets/scss/layout/footer/_navbar.scss
@@ -9,14 +9,21 @@ $footer-navbar-lv1-margin-top: 0.5rem !default;
 $footer-navbar-item-lv0-border-bottom-md: 1px solid $gray-400 !default;
 
 $footer-navbar-link-padding: 0.25rem 0 !default;
+$footer-navbar-link-lv0-padding-x-md: 0.5rem !default;
 $footer-navbar-link-lv0-padding-md: 1.5rem 0.5rem !default;
 $footer-navbar-link-lv0-color: $base-color !default;
 $footer-navbar-link-lv0-font-size: 0.75rem !default;
 $footer-navbar-link-lv0-font-weight: $font-weight-semi-bold !default;
+$footer-navbar-link-lv0-text-transform: uppercase !default;
 $footer-navbar-link-lv1-padding-md: 0.25rem 0.5rem !default;
 $footer-navbar-link-lv1-color: $gray-600 !default;
 $footer-navbar-link-lv1-font-size: $small-font-size !default;
 $footer-navbar-link-lv1-hover-color: $base-color !default;
+
+$footer-navbar-toggle-padding: $footer-navbar-link-lv0-padding-md !default;
+$footer-navbar-toggle-font-size: $base-font-size !default;
+
+$footer-navbar-link-parent-padding-right-md: $footer-navbar-link-lv0-padding-x-md * 2 + $footer-navbar-toggle-font-size !default;
 
 .footer__navbar {
     .navbar {
@@ -68,6 +75,10 @@ $footer-navbar-link-lv1-hover-color: $base-color !default;
 
             > .navbar__link {
                 position: relative;
+
+                @include mb-down(md) {
+                    padding-right: $footer-navbar-link-parent-padding-right-md;
+                }
             }
         }
     }
@@ -80,7 +91,7 @@ $footer-navbar-link-lv1-hover-color: $base-color !default;
             @include reset-link($footer-navbar-link-lv0-color);
             font-size: $footer-navbar-link-lv0-font-size;
             font-weight: $footer-navbar-link-lv0-font-weight;
-            text-transform: uppercase;
+            text-transform: $footer-navbar-link-lv0-text-transform;
 
             @include mb-down(md) {
                 padding: $footer-navbar-link-lv0-padding-md;
@@ -98,17 +109,17 @@ $footer-navbar-link-lv1-hover-color: $base-color !default;
     }
 
     .navbar__toggle {
+        position: absolute;
+        top: 0;
+        right: 0;
+        display: inline-flex;
+        align-items: center;
+        height: 100%;
+        padding: $footer-navbar-toggle-padding;
+        font-size: $footer-navbar-toggle-font-size;
+
         @include mb-up(md) {
             display: none;
-        }
-
-        @include mb-down(md) {
-            position: absolute;
-            top: 0;
-            right: 0;
-            height: 100%;
-            padding: $footer-navbar-link-lv0-padding-md;
-            font-size: $base-font-size;
         }
     }
 }
