--- a/src/assets/scss/components/_breadcrumb.scss
+++ b/src/assets/scss/components/_breadcrumb.scss
@@ -3,7 +3,7 @@
 // =====================================================
 
 $breadcrumb-gap: 0.25rem !default;
-$breadcrumb-color: $base-color !default;
+$breadcrumb-color: $body-color !default;
 $breadcrumb-font-size: $small-font-size !default;
 
 $breadcrumb-separator-icon: 'chevron-right' !default;
