--- a/src/assets/scss/layout/footer/_layout.scss
+++ b/src/assets/scss/layout/footer/_layout.scss
@@ -3,7 +3,7 @@
 // =====================================================
 
 $footer-background-color: $gray-200 !default;
-$footer-color: $base-color !default;
+$footer-color: $body-color !default;
 
 $footer-content-padding: 1.5rem 0 !default;
 
