--- a/src/assets/scss/layout/header/_hamburger.scss
+++ b/src/assets/scss/layout/header/_hamburger.scss
@@ -5,7 +5,7 @@
 $header-hamburger-layer-width: 22px !default;
 $header-hamburger-layer-height: 3.5px !default;
 $header-hamburger-layer-spacing: 3.5px !default;
-$header-hamburger-layer-color: $base-color !default;
+$header-hamburger-layer-color: $body-color !default;
 $header-hamburger-layer-border-radius: $base-border-radius !default;
 
 .header__hamburger {
