--- a/src/assets/scss/layout/header/_navbar.scss
+++ b/src/assets/scss/layout/header/_navbar.scss
@@ -11,9 +11,9 @@ $header-navbar-item-lv0-border-md: 1px solid $gray-300 !default;
 $header-navbar-item-lv1-border: $header-navbar-item-lv0-border-md !default;
 
 $header-navbar-link-color: $gray-700 !default;
-$header-navbar-link-color-md: $base-color !default;
+$header-navbar-link-color-md: $body-color !default;
 $header-navbar-link-font-size: $small-font-size !default;
-$header-navbar-link-hover-color: $base-color !default;
+$header-navbar-link-hover-color: $body-color !default;
 $header-navbar-link-hover-color-md: $header-navbar-link-hover-color !default;
 $header-navbar-link-lv0-padding: 0.5rem 0.75rem !default;
 $header-navbar-link-lv0-padding-x-md: $container-padding-x !default;
