--- a/src/assets/scss/abstracts/variables/_buttons.scss
+++ b/src/assets/scss/abstracts/variables/_buttons.scss
@@ -5,13 +5,13 @@
 $button-padding-y: 0.375rem !default;
 $button-padding-x: $button-padding-y * 2 !default;
 $button-background-color: transparent !default;
-$button-color: $base-color !default;
+$button-color: $body-color !default;
 $button-border-width: 1px !default;
 $button-border: $button-border-width solid transparent !default;
 $button-border-radius: $base-border-radius !default;
-$button-font-size: $base-font-size !default;
+$button-font-size: $body-font-size !default;
 $button-font-weight: $font-weight-medium !default;
-$button-line-height: $base-line-height !default;
+$button-line-height: $body-line-height !default;
 $button-text-transform: null !default;
 $button-disabled-opacity: 0.5 !default;
 
@@ -23,7 +23,7 @@ $button-icon-margin: div($button-padding-x, 2) !default;
 // Button big
 $button-big-padding-y: $button-padding-y + 0.125rem !default;
 $button-big-padding-x: $button-big-padding-y * 2 !default;
-$button-big-font-size: $base-font-size * 1.25 !default;
+$button-big-font-size: $body-font-size * 1.25 !default;
 
 $button-big-icon-width: calc(
     ($button-big-padding-y * 2) + ($button-big-font-size * $button-line-height) + ($button-border-width * 2)
@@ -33,7 +33,7 @@ $button-big-icon-margin: div($button-big-padding-x, 2) !default;
 // Button small
 $button-small-padding-y: $button-padding-y - 0.125rem !default;
 $button-small-padding-x: $button-small-padding-y * 2 !default;
-$button-small-font-size: $base-font-size * 0.875 !default;
+$button-small-font-size: $body-font-size * 0.875 !default;
 
 $button-small-icon-width: calc(
     ($button-small-padding-y * 2) + ($button-small-font-size * $button-line-height) + ($button-border-width * 2)
