--- a/src/assets/scss/abstracts/variables/_forms.scss
+++ b/src/assets/scss/abstracts/variables/_forms.scss
@@ -10,7 +10,7 @@ $input-margin-bottom: $base-margin !default;
 $input-padding-y: $button-padding-y !default;
 $input-padding-x: $button-padding-x !default;
 $input-background-color: $gray-100 !default;
-$input-color: $base-color !default;
+$input-color: $body-color !default;
 $input-border-width: $button-border-width !default;
 $input-border: $input-border-width solid $gray-400 !default;
 $input-border-radius: $button-border-radius !default;
@@ -21,7 +21,7 @@ $input-disabled-opacity: $button-disabled-opacity !default;
 // Checkbox
 $checkbox-width: 1rem !default;
 $checkbox-height: $checkbox-width !default;
-$checkbox-margin: div($base-line-height - $checkbox-width, 2) 0.5rem 0 0 !default;
+$checkbox-margin: div($body-line-height - $checkbox-width, 2) 0.5rem 0 0 !default;
 $checkbox-checked-background-color: $input-focus-border-color !default;
 $checkbox-checked-color: color-contrast($checkbox-checked-background-color) !default;
 $checkbox-checked-background-image: svg-encode(
@@ -40,7 +40,7 @@ $radio-checked-background-image: svg-encode(
 
 // Textarea
 $textarea-min-width: calc(
-    $base-line-height * ($base-font-size * 3) + $input-padding-y * 2 + $input-border-width * 2
+    $body-line-height * ($body-font-size * 3) + $input-padding-y * 2 + $input-border-width * 2
 ) !default;
 
 // Select
