--- a/src/assets/scss/abstracts/variables/_variables.scss
+++ b/src/assets/scss/abstracts/variables/_variables.scss
@@ -3,32 +3,10 @@
 // =====================================================
 
 @import 'root';
-
-// Base variables
-// =====================================================
-$base-margin: 1em !default;
-$base-border-radius: 0.25rem !default;
-// =====================================================
-
 @import 'colors';
-
-// Color base variables
-// =====================================================
-$base-background-color: $light !default;
-$base-color: $dark !default;
-$base-box-shadow-color: rgba($black, 0.05) !default;
-// =====================================================
-
+@import 'base';
 @import 'typography';
-
-// Typography base variables
-// =====================================================
-$base-font-family: $font-family-sans-serif !default;
-$base-font-size: $font-size !default;
-$base-font-weight: $font-weight-normal !default;
-$base-line-height: 1.5 !default;
-// =====================================================
-
+@import 'body';
 @import 'layout';
 @import 'images';
 @import 'tables';
