--- a/src/assets/scss/layout/footer/_navbar.scss
+++ b/src/assets/scss/layout/footer/_navbar.scss
@@ -11,17 +11,17 @@ $footer-navbar-item-lv0-border-bottom-md: 1px solid $gray-400 !default;
 $footer-navbar-link-padding: 0.25rem 0 !default;
 $footer-navbar-link-lv0-padding-x-md: 0.5rem !default;
 $footer-navbar-link-lv0-padding-md: 1.5rem 0.5rem !default;
-$footer-navbar-link-lv0-color: $base-color !default;
+$footer-navbar-link-lv0-color: $body-color !default;
 $footer-navbar-link-lv0-font-size: 0.75rem !default;
 $footer-navbar-link-lv0-font-weight: $font-weight-semi-bold !default;
 $footer-navbar-link-lv0-text-transform: uppercase !default;
 $footer-navbar-link-lv1-padding-md: 0.25rem 0.5rem !default;
 $footer-navbar-link-lv1-color: $gray-600 !default;
 $footer-navbar-link-lv1-font-size: $small-font-size !default;
-$footer-navbar-link-lv1-hover-color: $base-color !default;
+$footer-navbar-link-lv1-hover-color: $body-color !default;
 
 $footer-navbar-toggle-padding: $footer-navbar-link-lv0-padding-md !default;
-$footer-navbar-toggle-font-size: $base-font-size !default;
+$footer-navbar-toggle-font-size: $body-font-size !default;
 
 $footer-navbar-link-parent-padding-right-md: $footer-navbar-link-lv0-padding-x-md * 2 + $footer-navbar-toggle-font-size !default;
 
