--- a/src/assets/scss/base/reset/_embedded-content.scss
+++ b/src/assets/scss/base/reset/_embedded-content.scss
@@ -13,7 +13,7 @@ figcaption {
     font-size: $figcaption-font-size;
 
     img + & {
-        margin-top: div($base-margin, 2);
+        margin-top: 0.5rem;
     }
 }
 
