--- a/src/assets/scss/base/reset/_typography.scss
+++ b/src/assets/scss/base/reset/_typography.scss
@@ -76,7 +76,7 @@ blockquote {
     }
 
     figcaption {
-        margin: -$base-margin 0 $base-margin;
+        margin: -1rem 0 1rem;
         color: $blockquote-figcaption-color;
         font-size: $blockquote-figcaption-font-size;
 
