Refactoring utility classes

--- a/src/assets/scss/abstracts/functions/_transition.scss
+++ b/src/assets/scss/abstracts/functions/_transition.scss
@@ -2,6 +2,9 @@
 // Transition
 // =====================================================
 
+$transition-duration: 0.3s !default;
+$transition-timing-function: ease-in-out !default;
+
 @function transition($properties) {
     $properties-length: length($properties);
     $transition: '';
