--- a/src/assets/scss/abstracts/variables/_utilities.scss
+++ b/src/assets/scss/abstracts/variables/_utilities.scss
@@ -2,18 +2,122 @@
 // Utilities
 // =====================================================
 
-// Transition
-$transition-duration: 0.3s !default;
-$transition-timing-function: ease-in-out !default;
-
 // Spacer
 $spacer: 1rem !default;
 $spacers: (
-    'auto': auto,
     '0': 0,
     '1': $spacer * 0.25,
     '2': $spacer * 0.5,
     '3': $spacer,
     '4': $spacer * 1.5,
     '5': $spacer * 3,
+) !default;
+
+// Utilities values
+$color-values: $theme-colors !default;
+$background-color-values: $theme-colors !default;
+$text-align-values: (
+    'left': left,
+    'center': center,
+    'right': right,
+) !default;
+$padding-values: $spacers !default;
+$margin-values: map-merge(
+    $spacers,
+    (
+        auto: auto,
+    )
+) !default;
+
+$utilities: (
+    'color': (
+        'responsive': true,
+        'property': color,
+        'class': text,
+        'values': $color-values,
+    ),
+    'background-color': (
+        'responsive': true,
+        'property': background-color,
+        'class': background,
+        'values': $background-color-values,
+    ),
+    'text-align': (
+        'responsive': true,
+        'property': text-align,
+        'class': text,
+        'values': $text-align-values,
+    ),
+    'margin': (
+        'responsive': true,
+        'property': margin,
+        'class': m,
+        'values': $margin-values,
+    ),
+    'margin-x': (
+        'responsive': true,
+        'property': (
+            margin-right,
+            margin-left,
+        ),
+        'class': mx,
+        'values': $margin-values,
+    ),
+    'margin-y': (
+        'responsive': true,
+        'property': (
+            margin-top,
+            margin-bottom,
+        ),
+        'class': my,
+        'values': $margin-values,
+    ),
+    'margin-top': (
+        'responsive': true,
+        'property': margin-top,
+        'class': mt,
+        'values': $margin-values,
+    ),
+    'margin-bottom': (
+        'responsive': true,
+        'property': margin-bottom,
+        'class': mb,
+        'values': $margin-values,
+    ),
+    'padding': (
+        'responsive': true,
+        'property': padding,
+        'class': p,
+        'values': $padding-values,
+    ),
+    'padding-x': (
+        'responsive': true,
+        'property': (
+            padding-right,
+            padding-left,
+        ),
+        'class': px,
+        'values': $padding-values,
+    ),
+    'padding-y': (
+        'responsive': true,
+        'property': (
+            padding-top,
+            padding-bottom,
+        ),
+        'class': py,
+        'values': $padding-values,
+    ),
+    'padding-top': (
+        'responsive': true,
+        'property': padding-top,
+        'class': pt,
+        'values': $padding-values,
+    ),
+    'padding-bottom': (
+        'responsive': true,
+        'property': padding-bottom,
+        'class': pb,
+        'values': $padding-values,
+    ),
 ) !default;
