--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -6,5 +6,5 @@
 @import 'base/base';
 @import 'layout/layout';
 @import 'components/components';
-@import 'utilities/utilities';
+@import 'utilities';
 @import 'vendors/vendors';
