Remove 'transition' function

--- a/src/assets/scss/abstracts/variables/_typography.scss
+++ b/src/assets/scss/abstracts/variables/_typography.scss
@@ -2,6 +2,9 @@
 // Typography
 // =====================================================
 
+// Responsive font size
+$rfs-breakpoint-key: 'xl' !default;
+
 // Font families
 $font-family-sans-serif: 'Inter', sans-serif !default;
 $font-family-serif: 'Playfair Display', serif !default;
