--- a/src/assets/scss/abstracts/mixins/_mixins.scss
+++ b/src/assets/scss/abstracts/mixins/_mixins.scss
@@ -5,6 +5,6 @@
 @import 'media-queries';
 @import 'typography';
 @import 'buttons';
-@import 'transition';
-@import 'utility';
+@import 'transitions';
+@import 'utilities';
 @import 'icons';
