--- a/src/assets/scss/abstracts/mixins/_transitions.scss
+++ b/src/assets/scss/abstracts/mixins/_transitions.scss
@@ -1,11 +1,11 @@
 // =====================================================
-// Transition
+// Transitions
 // =====================================================
 
 $transition-duration: 0.3s !default;
 $transition-timing-function: ease-in-out !default;
 
-@function transition($properties) {
+@mixin transition($properties...) {
     $properties-length: length($properties);
     $transition: '';
 
@@ -22,5 +22,20 @@ $transition-timing-function: ease-in-out !default;
         $transition: 'all' + ' ' + $transition-duration + ' ' + $transition-timing-function;
     }
 
-    @return unquote($transition);
+    transition: unquote($transition);
+}
+
+// Transition animations
+// =====================================================
+
+// Collapse
+@mixin collapse {
+    @include transition(max-height);
+    max-height: 0;
+    overflow-y: hidden;
+}
+
+@mixin collapse-active($max-height: 50vh) {
+    max-height: $max-height;
+    overflow-y: auto;
 }
